# zappa-django-101

./: .gitignore  docker-compose.yml  package.json  pyproject.toml  requirements.txt
backend/: zappa_settings.json
backend/backend/: settings.py
backend/backend/settings/: base.py  local.py  production.py
backend/responses/: admin.py  models.py  serializers.py  urls.py  views.py
backend/responses/migrations/: 0001_initial.py
zappa-shell/: Dockerfile
